<resources>
    <string name="app_name">Warehouse</string>
    <string name="delete">Delete</string>
    <string name="categories">Categories</string>
    <string name="category">Category</string>
    <string name="name_text">Name</string>
    <string name="parent">Parent</string>
    <string name="button_save_category_label">save</string>
    <string name="save">Save</string>

    <string name="provider">Provider</string>
    <string name="price">Price</string>

    <string name="phone">Phone</string>
    <string name="address">Address</string>

    <string name="empty">Empty</string>
    <string name="request_code">Request code</string>
    <string name="providers">Providers</string>
    <string name="articles">Articles</string>
    <string name="article">Article</string>
    <string name="settings">Settings</string>

    <string name="shared_prefs_error">No such parameter</string>
    <string name="cant_save">No permissions, I can\'t save the note</string>
    <string name="note">Note</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>


</resources>
