<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/article_view_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/article"
        android:textAllCaps="true"
        android:textSize="@dimen/text_title_size"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/name_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/article_view_title"
        android:layout_marginTop="@dimen/double_line_margin">



        <EditText
            android:id="@+id/article_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_fields_margin"
            android:layout_toEndOf="@+id/article_name_label"
            android:inputType="text" />

        <TextView
            android:id="@+id/article_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_line_margin"
            android:labelFor="@id/article_name_input"
            android:text="@string/name_text"
            android:textSize="@dimen/text_field_size" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/price_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_row"
        android:layout_marginTop="@dimen/standard_line_margin">



        <EditText
            android:id="@+id/article_price_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_fields_margin"
            android:layout_toEndOf="@+id/article_price_label"
            android:inputType="text" />

        <TextView
            android:id="@+id/article_price_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_line_margin"
            android:labelFor="@id/article_price_input"
            android:text="@string/price"
            android:textSize="@dimen/text_field_size" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/category_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/price_row"
        android:layout_marginTop="@dimen/double_line_margin">

        <TextView
            android:id="@+id/category_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textSize="@dimen/text_field_size" />

        <Spinner
            android:id="@+id/category_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_fields_margin"
            android:layout_toEndOf="@id/category_label" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/provider_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/category_row"
        android:layout_marginTop="@dimen/double_line_margin">

        <TextView
            android:id="@+id/provider_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/provider"
            android:textSize="@dimen/text_field_size" />
        <Spinner
            android:id="@+id/provider_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_fields_margin"
            android:layout_toEndOf="@id/provider_label" />




    </RelativeLayout>

</RelativeLayout>