<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/provider_view_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/provider"
        android:textAllCaps="true"
        android:textSize="@dimen/text_title_size"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/first_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/provider_view_title"
        android:layout_marginTop="@dimen/double_line_margin">

        <TextView
            android:id="@+id/provider_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_line_margin"
            android:labelFor="@id/category_name_input"
            android:text="@string/name_text"
            android:textSize="@dimen/text_field_size" />

        <EditText
            android:id="@+id/provider_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_fields_margin"
            android:layout_toEndOf="@+id/provider_name_label"
            android:inputType="text" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/second_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/first_row"
        android:layout_marginTop="@dimen/standard_line_margin">


        <EditText
            android:id="@+id/provider_phone_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_fields_margin"
            android:layout_toEndOf="@+id/provider_phone_label"
            android:inputType="phone" />

        <TextView
            android:id="@+id/provider_phone_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_line_margin"
            android:labelFor="@id/provider_phone_input"
            android:text="@string/phone"
            android:textSize="@dimen/text_field_size" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/third_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/second_row"
        android:layout_marginTop="@dimen/standard_line_margin">


        <EditText
            android:id="@+id/provider_address_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_fields_margin"
            android:layout_toEndOf="@+id/provider_address_label"
            android:inputType="textPostalAddress" />

        <TextView
            android:id="@+id/provider_address_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_line_margin"
            android:labelFor="@id/provider_address_input"
            android:text="@string/address"
            android:textSize="@dimen/text_field_size" />


    </RelativeLayout>

</RelativeLayout>